<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/content_configuration"
    tools:context=".views.ConfigurationView"
    >

    <TextView
        android:id="@+id/name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textColor="#6d3d7a"
        android:textSize="20sp"
        app:fontFamily="@font/work_sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="15"
        android:hint="@string/user_name"
        android:id="@+id/name_input" app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="40dp" android:layout_marginStart="40dp"
        android:importantForAutofill="no"
        tools:targetApi="o" />

    <TextView
        android:text="@string/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp" android:id="@+id/difficulty_header" android:textSize="20sp"
        android:layout_marginTop="27dp" app:layout_constraintTop_toBottomOf="@+id/name_input"
        android:textColor="#6d3d7a" />

    <Spinner
        android:layout_width="205dp"
        android:layout_height="34dp"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:spinnerMode="dropdown"
        android:id="@+id/difficulty_spinner" app:layout_constraintHorizontal_bias="0.732"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/name_input"/>
    <TextView
        android:text="@string/skill_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skill_points_header" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp" android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_header"/>
    <TextView
        android:text="@string/_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skill_points_number" android:layout_marginLeft="40dp" android:layout_marginStart="40dp"
        app:layout_constraintStart_toEndOf="@+id/skill_points_header"
        app:layout_constraintTop_toTopOf="@+id/skill_points_header"/>
    <TextView
        android:text="@string/pilot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp" android:id="@+id/pilot_header" android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/skill_points_header"/>
    <TextView
        android:text="@string/fighter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fighter_header" android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/pilot_header" app:layout_constraintStart_toStartOf="@+id/pilot_header"
        />
    <TextView
        android:text="@string/trader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/pilot_header"
        android:id="@+id/trader_header" android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/fighter_header"/>
    <TextView
        android:text="@string/engineer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/pilot_header"
        android:id="@+id/engineer_header" android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/trader_header"/>
    <Button
        android:text="@string/_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pilot_plus"
        app:layout_constraintTop_toTopOf="@+id/pilot_header" app:layout_constraintStart_toEndOf="@+id/pilot_header"
        android:layout_marginLeft="50dp" android:layout_marginStart="50dp"/>
    <Button
        android:text="@string/_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pilot_minus"
        app:layout_constraintTop_toTopOf="@+id/pilot_header" app:layout_constraintStart_toEndOf="@+id/pilot_plus"
        android:layout_marginLeft="20dp" android:layout_marginStart="20dp"/>
    <Button
        android:text="@string/_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fighter_plus"
        app:layout_constraintTop_toTopOf="@+id/fighter_header"
        app:layout_constraintStart_toStartOf="@+id/pilot_plus"
        />
    <Button
        android:text="@string/_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fighter_minus"
        app:layout_constraintTop_toTopOf="@+id/fighter_header"
        app:layout_constraintStart_toStartOf="@+id/pilot_minus"
        />
    <Button
        android:text="@string/_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trader_plus"
        app:layout_constraintTop_toTopOf="@+id/trader_header" app:layout_constraintStart_toStartOf="@+id/pilot_plus"
        />
    <Button
        android:text="@string/_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trader_minus"
        app:layout_constraintTop_toTopOf="@+id/trader_header"
        app:layout_constraintStart_toStartOf="@+id/pilot_minus"
        />
    <Button
        android:text="@string/_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/engineer_plus"
        app:layout_constraintTop_toTopOf="@+id/engineer_header"
        app:layout_constraintStart_toStartOf="@+id/pilot_plus"
        />
    <Button
        android:text="@string/_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/engineer_minus"
        app:layout_constraintTop_toTopOf="@+id/engineer_header"
        app:layout_constraintStart_toStartOf="@+id/pilot_minus"/>
    <TextView
        android:text="@string/_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pilot_points" app:layout_constraintStart_toEndOf="@+id/pilot_minus"
        android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toTopOf="@+id/pilot_header"/>
    <TextView
        android:text="@string/_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/fighter_points" app:layout_constraintStart_toEndOf="@+id/fighter_minus"
        android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@+id/fighter_header"/>
    <TextView
        android:text="@string/_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/trader_points" app:layout_constraintStart_toEndOf="@+id/trader_minus"
        android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@+id/trader_header"/>
    <TextView
        android:text="@string/_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/engineer_points" app:layout_constraintStart_toEndOf="@+id/engineer_minus"
        android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@+id/engineer_header"/>
    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/okay_button"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="0dp" android:layout_marginStart="0dp"
        app:layout_constraintStart_toStartOf="@+id/engineer_plus"
        app:layout_constraintTop_toBottomOf="@+id/engineer_plus"/>
    <Button
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exit_button"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp" android:layout_marginStart="0dp"
        app:layout_constraintStart_toStartOf="@+id/engineer_minus"
        app:layout_constraintTop_toTopOf="@+id/okay_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>