<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_weight="0"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".views.PlanetsView">

    <TextView
        android:id="@+id/select_a_planet_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/select_a_planet"
        android:textStyle="bold"
        android:textColor="#6d3d7a"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selected_region_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/region"
        android:textColor="#6d3d7a"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_a_planet_view" />

    <GridView
        android:id="@+id/planets_gridView"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:numColumns="3"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_region_view" />

    <TextView
        android:id="@+id/single_planetname_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/name_1"
        android:textColor="#6d3d7a"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        app:layout_constraintTop_toBottomOf="@+id/planets_gridView" />

    <TextView
        android:id="@+id/single_planet_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/select_a_planet"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        app:layout_constraintTop_toBottomOf="@+id/planets_gridView" />

    <TextView
        android:id="@+id/single_planet_location_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="#6d3d7a"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        app:layout_constraintTop_toBottomOf="@+id/single_planetname_view" />

    <TextView
        android:id="@+id/single_planet_location_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/select_a_planet"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        app:layout_constraintTop_toBottomOf="@+id/single_planet_selected"/>

    <Button
        android:id="@+id/travel_region_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/travel_to_a_different_region"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_mercenary_button" />

    <Button
        android:id="@+id/enter_mercenary_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="8dp"
        android:text="@string/enter_the_mercenaries_market"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_market_button" />

    <Button
        android:id="@+id/enter_market_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginLeft="118dp"
        android:layout_marginTop="30dp"
        android:text="@string/enter_the_market"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/single_planet_location_selected" />


</androidx.constraintlayout.widget.ConstraintLayout>