<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:showIn="@layout/activity_main"
    tools:context=".views.MainActivity">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/rocket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/main_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="@+id/imageView1"
        app:layout_constraintTop_toTopOf="@id/imageView1"
        app:layout_constraintVertical_bias="0.759" />

    <Button
        android:id="@+id/main_exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView1"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="@+id/imageView1"
        app:layout_constraintTop_toTopOf="@id/imageView1"
        app:layout_constraintVertical_bias="0.759" />

    <Button
        android:id="@+id/mini_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mini_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/main_start_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/main_start_button"
        app:layout_constraintTop_toTopOf="@id/main_start_button"
        app:layout_constraintVertical_bias="0.398" />

    <TextView
        android:id="@+id/game_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/space_trader"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/music_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pause Music"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_exit_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_exit_button"
        app:layout_constraintTop_toTopOf="@+id/main_exit_button"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Firebase Cloud Storage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mini_game_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/mini_game_button"
        app:layout_constraintTop_toTopOf="@+id/mini_game_button"
        app:layout_constraintVertical_bias="0.689" />


</androidx.constraintlayout.widget.ConstraintLayout>